--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,7 +25,7 @@
               </div>
             <div class="actions mdl-card__actions mdl-card--border">
               <div class="actions">
-                <%= f.submit 'Sign up', class: 'mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent' %>
+                <%= f.submit 'Sign up', class: '' %>
               </div>
             </div>
           <% end %>
