nearly complete credit cards model

--- a/app/views/credit_cards/index.html.erb
+++ b/app/views/credit_cards/index.html.erb
@@ -43,7 +43,7 @@
           <td><%= number_to_currency(@credit_card_debt, unit: "$") %></td>
           <td><%= number_to_currency(@credit_limit, unit: "$") %></td>
           <td><%= number_to_currency(@available_credit, unit: "$") %></td>
-          <td><%= number_to_currency(@total_monthly_payment, unit: "$") %></td>
+          <td><%= @total_monthly_payment %></td>
           <td></td>
           <td></td>
           <td></td>
