--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,65 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="mdl-grid">
+  <div class="mdl-cell mdl-cell--2-col"></div>
+  <div class="mdl-cell mdl-cell--8-col">
+    <div class="signup-card-wide mdl-card mdl-shadow--2dp">
+      <div class="mdl-card__title">
+        <h2 class="mdl-card__title-text">Edit <%= resource_name.to_s.humanize %></h2>
+      </div>
+      <div class="mdl-card__supporting-text">
+          <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+            <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <%= f.label :email, class:'mdl-textfield__label' %><br />
+              <%= f.email_field :email, autofocus: true, class:'mdl-textfield__input' %>
+            </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+            <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+              <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+            <% end %>
+
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <%= f.label :password, class:'mdl-textfield__label' %><br />
+              <i>(leave blank if you don't want to change it)</i><br />
+              <%= f.password_field :password, autocomplete: 'off', class:'mdl-textfield__input' %>
+              <% if @minimum_password_length %>
+                <br />
+                <em><%= @minimum_password_length %> characters minimum</em>
+              <% end %>
+            </div>
+
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <%= f.label :password_confirmation, class:'mdl-textfield__label' %><br />
+              <%= f.password_field :password_confirmation, autocomplete: 'off', class:'mdl-textfield__input' %>
+            </div>
+
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <%= f.label :current_password, class:'mdl-textfield__label' %><br /><i>(we need your current password to confirm your changes)</i><br />
+              <%= f.password_field :current_password, autocomplete: 'off', class:'mdl-textfield__input' %>
+            </div>
+
+            <div class="actions">
+              <%= f.submit "Update" %>
+            </div>
+          <% end %>
+      </div>
+    </div>
   </div>
+  <div class="mdl-cell mdl-cell--2-col"></div>
+</div>
+<div class="mdl-grid">
+  <div class="mdl-cell mdl-cell--2-col"></div>
+  <div class="mdl-cell mdl-cell--8-col">
+    <div class="signup-card-wide mdl-card mdl-shadow--2dp">
+      <div class="mdl-card__title">
+        <h3 class="mdl-card__title-text">Cancel my account</h3>
+      </div>
+      <div class="mdl-card__supporting-text">
+        <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+        <%= link_to "Back", :back %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
