--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,38 +9,45 @@
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
             <%= devise_error_messages! %>
             <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                  <%= f.label :email, class:'mdl-textfield__label' %><br />
-                  <%= f.email_field :email, autofocus: true, class:'mdl-textfield__input' %>
-                </div>
-
-                <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-              <%= f.label :password, class:'mdl-textfield__label' %>
-              <%= f.password_field :password ,autocomplete: 'off', class:'mdl-textfield__input' %>
+              <%= f.label :firstName, class:'mdl-textfield__label' %><br />
+              <%= f.text_field :firstName, autofocus: true, class:'mdl-textfield__input' %>
             </div>
-
-              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <%= f.label :lastName, class:'mdl-textfield__label' %><br />
+              <%= f.text_field :lastName, autofocus: true, class:'mdl-textfield__input' %>
+            </div>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <%= f.label :email, class:'mdl-textfield__label' %><br />
+              <%= f.email_field :email, autofocus: true, class:'mdl-textfield__input' %>
+            </div>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+              <%= f.label :password, class:'mdl-textfield__label' %>
+              <%= f.password_field :password, autocomplete: 'off', class:'mdl-textfield__input' %>
+            </div>
+            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
               <%= f.label :password_confirmation, class:'mdl-textfield__label' %><br />
               <%= f.password_field :password_confirmation, autocomplete: 'off', class:'mdl-textfield__input' %>
             </div>
-              </div>
             <div class="actions mdl-card__actions mdl-card--border">
               <div class="actions">
                 <%= f.submit 'Sign up', class: '' %>
               </div>
             </div>
           <% end %>
+        </div>
       </div>
     </div>
-</div>
-<div class="mdl-grid">
   <div class="mdl-cell mdl-cell--2-col"></div>
-  <div class="mdl-cell mdl-cell--8-col">
-    <div class="signup-card-wide mdl-card mdl-shadow--2dp">
-      <div class="mdl-card__title">
-      </div>
+  <div class="mdl-grid">
+    <div class="mdl-cell mdl-cell--2-col"></div>
+    <div class="mdl-cell mdl-cell--8-col">
+      <div class="signup-card-wide mdl-card mdl-shadow--2dp">
+        <div class="mdl-card__title">
 
-      <div class="mdl-card__supporting-text">
-      <%= render 'devise/shared/links' %>
+        </div>
+        <div class="mdl-card__supporting-text">
+          <%= render 'devise/shared/links' %>
+        </div>
       </div>
     </div>
   </div>
