--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,18 @@
 @import 'material';
 
+.flex-container {
+  display: -webkit-flex; /* Safari */
+  display: flex;
+  -webkit-flex-direction: column; /* Safari */
+  flex-direction: column;
+  -webkit-flex-wrap: nowrap; /* Safari */
+  flex-wrap: nowrap;
+  -webkit-justify-content: center; /* Safari */
+  justify-content: center;
+  -webkit-align-items: center; /* Safari */
+  align-items: center;
+}
+
 
 .mdl-layout__header-row {
   background: none !important;
