--- a/app/views/credit_cards/index.html.erb
+++ b/app/views/credit_cards/index.html.erb
@@ -13,7 +13,8 @@
           <th>Limit</th>
           <th>Available</th>
           <th>Min Payments</th>
-          <th colspan="3"></th>
+          <th>Payoff</th>
+          <th colspan="2"></th>
         </tr>
       </thead>
 
@@ -28,7 +29,7 @@
             <td><%= number_to_currency(credit_card.limit, unit: "$") %></td>
             <td><%= number_to_currency(credit_card.credit_available, unit: "$") %></td>
             <td><%= number_to_currency(credit_card.minimum_payment, unit: "$") %></td>
-            <td></td>
+            <td><%= credit_card.payments_to_payoff.round(1) %></td>
             <td></td>
             <td></td>
           </tr>
@@ -43,7 +44,7 @@
           <td><%= number_to_currency(@credit_card_debt, unit: "$") %></td>
           <td><%= number_to_currency(@credit_limit, unit: "$") %></td>
           <td><%= number_to_currency(@available_credit, unit: "$") %></td>
-          <td><%= @total_monthly_payment %></td>
+          <td><%= number_to_currency(@total_monthly_payment, unit: "$") %></td>
           <td></td>
           <td></td>
           <td></td>
