--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,4 @@
-<div class="mdl-grid">
-  <div class="mdl-cell mdl-cell--2-col"></div>
-  <div class="mdl-cell mdl-cell--8-col">
+
     <div class="signup-card-wide mdl-card mdl-shadow--2dp">
       <div class="mdl-card__title">
         <h2 class="mdl-card__title-text">Edit <%= resource_name.to_s.humanize %></h2>
@@ -8,6 +6,16 @@
       <div class="mdl-card__supporting-text">
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
             <%= devise_error_messages! %>
+
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <%= f.label :firstName, class:'mdl-textfield__label' %><br />
+            <%= f.text_field :firstName, autofocus: true, class:'mdl-textfield__input' %>
+          </div>
+
+          <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+            <%= f.label :lastName, class:'mdl-textfield__label' %><br />
+            <%= f.text_field :lastName, autofocus: true, class:'mdl-textfield__input' %>
+          </div>
 
           <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
               <%= f.label :email, class:'mdl-textfield__label' %><br />
@@ -44,9 +52,6 @@
           <% end %>
       </div>
     </div>
-  </div>
-  <div class="mdl-cell mdl-cell--2-col"></div>
-</div>
 <div class="mdl-grid">
   <div class="mdl-cell mdl-cell--2-col"></div>
   <div class="mdl-cell mdl-cell--8-col">
