add support hero

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
   </main>
   <%= render 'shared/footer' %>
 </div>
+<script async data-cfasync="false" src="https://d29l98y0pmei9d.cloudfront.net/js/widget.min.js?k=Y2xpZW50SWQ9MTMyOCZob3N0TmFtZT1iaWxseWNhcmQuc3VwcG9ydGhlcm8uaW8="></script>
 </body>
 </html>
 
