--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,10 +1,12 @@
 <footer class="mdl-mini-footer">
   <div class="mdl-mini-footer__left-section">
-    <%= link_to 'Which Billy', root_path, class: 'mdl-logo' %>
+    <%= link_to 'BillyCard', root_path, class: 'mdl-logo' %>
     <ul class="mdl-mini-footer__link-list">
-      <li><a href="#">Help</a></li>
+      <li><a href="https://billycard.supporthero.io/content">Help</a></li>
       <li><a href="#">Privacy & Terms</a></li>
     </ul>
   </div>
-  Made With Love By JemAuthentic
+  <div class="mdl-mini-footer__right-section">
+  <%= link_to 'Made With Love By JemAuthentic', 'http://www.jemauthentic.com', class: 'mdl-logo' %>
+  </div>
 </footer>
