--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,8 @@
             <div class="mdl-layout-spacer"></div>
             <!-- Navigation. We hide it in small screens. -->
           <nav class="mdl-navigation mdl-layout--large-screen-only">
-                  <%= link_to 'Credit Cards', credit_cards_path , class: 'mdl-navigation__link' %>
+            <%= link_to 'Credit Cards', credit_cards_path , class: 'mdl-navigation__link' %>
+            <%= link_to 'Subscriptions', subs_path , class: 'mdl-navigation__link' %>
             <% if response.code.to_i != 404 %>
               <%= button_tag current_user.firstName, class: 'mdl-navigation__link', id:'demo-menu-lower-left' %>
             <% else %>
@@ -45,12 +46,18 @@
           <%= link_to 'Edit Profile', edit_user_registration_path, class: 'mdl-navigation__link' %>
           <%= link_to 'New Card', new_credit_card_path, class: 'mdl-navigation__link' %>
           <%= link_to 'All Cards', credit_cards_path, class: 'mdl-navigation__link' %>
+          <%= link_to 'New Subscription', new_sub_path, class: 'mdl-navigation__link' %>
+          <%= link_to 'All Subscriptions', subs_path, class: 'mdl-navigation__link' %>
           <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'mdl-navigation__link' %>
         <% else %>
           <%= button_tag image_tag(avatar_url(current_user), class: 'avatar', id:'demo-menu-lower-left') %>
           <%= link_to 'Edit Profile', edit_user_registration_path, class: 'mdl-navigation__link' %>
           <%= link_to 'New Card', new_credit_card_path, class: 'mdl-navigation__link' %>
-          <%= link_to 'All Cards', credit_cards_path , class: 'mdl-navigation__link' %>
+          <%= link_to 'All Cards', credit_cards_path, class: 'mdl-navigation__link' %>
+          <%= link_to 'New Subscription', new_sub_path, class: 'mdl-navigation__link' %>
+          <%= link_to 'All Subscriptions', subs_path, class: 'mdl-navigation__link' %>
+          <%= link_to "Log out", destroy_user_session_path, method: :delete, class: 'mdl-navigation__link' %>
+
         <% end %>
       <% else %>
           <%= link_to 'Log In', new_user_session_path, class: 'mdl-navigation__link' %>
