--- a/app/views/subs/index.html.erb
+++ b/app/views/subs/index.html.erb
@@ -10,21 +10,17 @@
       <th>Frequency</th>
       <th>Amount</th>
       <th>Annual Cost</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @subs.each do |sub| %>
       <tr>
-        <td><%= sub.name %></td>
+        <td><%= link_to sub.name, sub %></td>
         <td><%= sub.description %></td>
         <td><%= sub.frequency %></td>
         <td><%= number_to_currency(sub.amount, unit: "$") %></td>
-        <td><%= sub.annual_cost %></td>
-        <td><%= link_to 'Show', sub %></td>
-        <td><%= link_to 'Edit', edit_sub_path(sub) %></td>
-        <td><%= link_to 'Destroy', sub, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= number_to_currency(sub.annual_cost, unit: "$") %></td>
       </tr>
     <% end %>
   </tbody>
@@ -34,17 +30,14 @@
     <td></td>
     <td></td>
     <td><%= number_to_currency(@monthly_subs, unit: "$") %></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td><%= number_to_currency(@total_annual_subs, unit: "$") %></td>
   </tr>
   </tfoot>
 </table>
 
 <br>
 
-<%= link_to 'New Sub', new_sub_path %>
+<%= link_to 'New Subscription', new_sub_path %>
 <% else %>
   You have no Subscriptions, better
   <%= link_to new_sub_path, class: 'mdl-button mdl-js-button mdl-button--fab mdl-button--colored' do %>
