--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
               </div>
             <% end %>
             <%= link_to subs_path , class: 'mdl-navigation__link' do %>
-              <i id="tt2" class="material-icons">auto_renew</i>
+              <i id="tt2" class="material-icons">autorenew</i>
               <div class="mdl-tooltip" data-mdl-for="tt2">
                 Subscriptions
               </div>
