add accounts nav

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,12 +11,18 @@
             <%= link_to '' , class: 'mdl-navigation__link'  do %>
               <i id="tt1" class="material-icons">dashboard</i>
               <div class="mdl-tooltip" data-mdl-for="tt1">
-                Dashboard <br> Coming Soon!
+                Dashboard - Coming Soon!
+              </div>
+            <% end %>
+            <%= link_to '' , class: 'mdl-navigation__link'  do %>
+              <i id="tt5" class="material-icons">account_balance</i>
+              <div class="mdl-tooltip" data-mdl-for="tt5">
+                Accounts - Coming Soon!
               </div>
             <% end %>
             <%= link_to credit_cards_path , class: 'mdl-navigation__link'  do %>
-              <i id="tt1" class="material-icons">credit_card</i>
-              <div class="mdl-tooltip" data-mdl-for="tt1">
+              <i id="tt4" class="material-icons">credit_card</i>
+              <div class="mdl-tooltip" data-mdl-for="tt4">
                 Credit Cards
               </div>
             <% end %>
