--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,27 +14,27 @@
                 Dashboard - Coming Soon!
               </div>
             <% end %>
-            <%= link_to '' , class: 'mdl-navigation__link'  do %>
-              <i id="tt5" class="material-icons">account_balance</i>
-              <div class="mdl-tooltip" data-mdl-for="tt5">
+            <%= link_to accounts_path , class: 'mdl-navigation__link'  do %>
+              <i id="tt2" class="material-icons">account_balance</i>
+              <div class="mdl-tooltip" data-mdl-for="tt2">
                 Accounts - Coming Soon!
               </div>
             <% end %>
             <%= link_to credit_cards_path , class: 'mdl-navigation__link'  do %>
-              <i id="tt4" class="material-icons">credit_card</i>
-              <div class="mdl-tooltip" data-mdl-for="tt4">
+              <i id="tt3" class="material-icons">credit_card</i>
+              <div class="mdl-tooltip" data-mdl-for="tt3">
                 Credit Cards
               </div>
             <% end %>
             <%= link_to subs_path , class: 'mdl-navigation__link' do %>
-              <i id="tt2" class="material-icons">autorenew</i>
-              <div class="mdl-tooltip" data-mdl-for="tt2">
+              <i id="tt4" class="material-icons">autorenew</i>
+              <div class="mdl-tooltip" data-mdl-for="tt4">
                 Subscriptions
               </div>
             <% end %>
             <%= link_to '', class: 'mdl-navigation__link', id:'demo-menu-lower-left' do %>
-              <i id="tt3" class="material-icons">account_circle</i>
-              <div class="mdl-tooltip" data-mdl-for="tt3">
+              <i id="tt5" class="material-icons">account_circle</i>
+              <div class="mdl-tooltip" data-mdl-for="tt5">
                 Account
               </div>
             <% end %>
