--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -6,7 +6,7 @@
 </p>
 
 <h1>Transactions</h1>
-
+<% if Account.transaction.any? %>
 <table>
   <thead>
   <tr>
@@ -18,7 +18,7 @@
   </thead>
 
   <tbody>
-  <% @transactions.each do |transaction| %>
+  <% @Account.transactions.each do |transaction| %>
     <tr>
       <td><%= transaction.Date %></td>
       <td><%= transaction.amount %></td>
@@ -32,8 +32,10 @@
 </table>
 
 <br>
+  <% else %>
 
 <%= link_to 'New Transaction', new_transaction_path %>
 
 <%= link_to 'Edit', edit_account_path(@account) %> |
 <%= link_to 'Back', accounts_path %>
+<% end %>
