--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,25 @@
   </main>
   <%= render 'shared/footer' %>
 </div>
+<script>
+    var beamer_config = {
+        selector : "tt6", //REPLACE: Your element Id to position the alert
+        product_id : "XUyyasWynull", //DO NOT CHANGE: This is your product code on Beamer
+        //top: 0, /*Optional: Top position offset for the notification bubble*/
+        right: 10, /*Optional: Right position offset for the notification bubble*/
+        //button_position: 'bottom-right', /*Optional: Position for the notification button that shows up when the selector parameter is not set*/
+        //language: 'EN', /*Optional: Bring news in the language of choice*/
+        //filter: 'admin', /*Optional : Bring the news for a certain role as well as all the public news*/
+        //lazy: false, /*Optional : true if you want to manually start the script by calling Beamer.init()*/
+        //alert : true, /*Optional : false if you don't want to initialize the selector*/
+        //callback : your_callback_function, /*Optional : Beamer will call this function, with the number of new features as a parameter, after the initialization*/
+        //---------------Visitor Information---------------
+        //user_firstname : "firstname", /*Optional : input your user firstname for better statistics*/
+        //user_lastname : "lastname", /*Optional : input your user lastname for better statistics*/
+        //user_email : "email", /*Optional : input your user email for better statistics*/
+    };
+</script>
+<script type="text/javascript" src="https://app.getbeamer.com/js/beamer-embed.js"></script>
 <script async data-cfasync="false" src="https://d29l98y0pmei9d.cloudfront.net/js/widget.min.js?k=Y2xpZW50SWQ9MTMyOCZob3N0TmFtZT1iaWxseWNhcmQuc3VwcG9ydGhlcm8uaW8="></script>
 </body>
 </html>
