--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,92 +1,134 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Expenses</h1>
+<div class = "mdl-tabs mdl-js-tabs">
+  <div class = "mdl-tabs__tab-bar">
+    <a href="#tab1-panel" class="mdl-tabs__tab is-active">Weekly</a>
+    <a href="#tab2-panel" class="mdl-tabs__tab">Monthly</a>
+    <a href="#tab3-panel" class="mdl-tabs__tab">Annually</a>
+  </div>
+  <div class="mdl-tabs__panel is-active" id="tab1-panel">
 
-Annually
-<br>
-<table class="mdl-data-table mdl-js-data-table">
-  <thead>
-  <tr>
-    <th>Name</th>
-    <th>Amount</th>
-  </tr>
-  </thead>
+    <h3>Weekly</h3>
+    <br>
 
-  <tbody>
-  <% @expenses.each do |expense| %>
-    <tr>
-      <td><%= expense.name %></td>
-      <td><%= number_to_currency(expense.annual_expense, unit: "$") %></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+    <table class="mdl-data-table mdl-js-data-table">
+      <thead>
+      <tr>
+        <th>Name</th>
+        <th>Amount</th>
+      </tr>
+      </thead>
 
-<br>
+      <tbody>
+      <% @expenses.each do |expense| %>
+        <tr>
+          <td><%= expense.name %></td>
+          <td><%= number_to_currency(expense.weekly_expense, unit: "$") %></td>
+        </tr>
+      <% end %>
+      <tr>
+        <td> Credit Card Payments</td>
+        <td><%= number_to_currency(@weekly_cc, unit: "$") %></td>
+      </tr>
+      <tr>
+        <td> Subscription Payments</td>
+        <td><%= number_to_currency(@weekly_subs, unit: "$") %></td>
+      </tr>
+      </tbody>
+      <tfoot>
+      <tr>
+        <td></td>
+        <td><%= number_to_currency(@total_weekly_expenses, unit: "$") %></td>
+      </tr>
+      </tfoot>
+    </table>
 
-<%= link_to 'New Expense', new_expense_path %>
-<br>
-Monthly
-<br>
-<table class="mdl-data-table mdl-js-data-table">
-  <thead>
-  <tr>
-    <th>Name</th>
-    <th>Amount</th>
-  </tr>
-  </thead>
+    <br>
 
-  <tbody>
-  <% @expenses.each do |expense| %>
-    <tr>
-      <td><%= expense.name %></td>
-      <td><%= number_to_currency(expense.monthly_expense, unit: "$") %></td>
-    </tr>
-  <% end %>
-    <tr>
-      <td> Credit Card Payments </td>
-      <td><%= number_to_currency(@total_monthly_payment, unit: "$") %></td>
-    </tr>
-    <tr>
-      <td> Subscription Payments</td>
-      <td><%= number_to_currency(@monthly_subs, unit: "$") %></td>
-    </tr>
-  </tbody>
-  <tfoot>
-    <tr>
-      <td></td>
-      <td><%= number_to_currency(@total_monthly_expense, unit: "$") %></td>
-    </tr>
-  </tfoot>
-</table>
+    <%= link_to 'New Expense', new_expense_path %>
+  </div>
 
-<br>
+  <div class="mdl-tabs__panel" id="tab2-panel">
+    <h3>Monthly</h3>
+    <br>
+    <table class="mdl-data-table mdl-js-data-table">
+      <thead>
+      <tr>
+        <th>Name</th>
+        <th>Amount</th>
+      </tr>
+      </thead>
 
-<%= link_to 'New Expense', new_expense_path %>
+      <tbody>
+      <% @expenses.each do |expense| %>
+        <tr>
+          <td><%= expense.name %></td>
+          <td><%= number_to_currency(expense.monthly_expense, unit: "$") %></td>
+        </tr>
+      <% end %>
+      <tr>
+        <td> Credit Card Payments</td>
+        <td><%= number_to_currency(@total_monthly_payment, unit: "$") %></td>
+      </tr>
+      <tr>
+        <td> Subscription Payments</td>
+        <td><%= number_to_currency(@monthly_subs, unit: "$") %></td>
+      </tr>
+      </tbody>
+      <tfoot>
+      <tr>
+        <td></td>
+        <td><%= number_to_currency(@total_monthly_expense, unit: "$") %></td>
+      </tr>
+      </tfoot>
+    </table>
 
-<br>
+    <br>
 
-Weekly
-<br>
+    <%= link_to 'New Expense', new_expense_path %>
 
-<table class="mdl-data-table mdl-js-data-table">
-  <thead>
-  <tr>
-    <th>Name</th>
-    <th>Amount</th>
-  </tr>
-  </thead>
+    <br>
+  </div>
 
-  <tbody>
-  <% @expenses.each do |expense| %>
-    <tr>
-      <td><%= expense.name %></td>
-      <td><%= number_to_currency(expense.weekly_expense, unit: "$") %></td>
-    </tr>
-  <% end %>
-  </tbody>
-</table>
+  <div class="mdl-tabs__panel" id="tab3-panel">
+    <h3>Annually</h3>
+    <br>
+    <table class="mdl-data-table mdl-js-data-table">
+      <thead>
+      <tr>
+        <th>Name</th>
+        <th>Amount</th>
+      </tr>
+      </thead>
 
-<br>
+      <tbody>
+      <% @expenses.each do |expense| %>
+        <tr>
+          <td><%= expense.name %></td>
+          <td><%= number_to_currency(expense.annual_expense, unit: "$") %></td>
+        </tr>
+      <% end %>
+      <tr>
+        <td> Credit Card Payments</td>
+        <td><%= number_to_currency(@annual_cc, unit: "$") %></td>
+      </tr>
+      <tr>
+        <td> Subscription Payments</td>
+        <td><%= number_to_currency(@annual_subs, unit: "$") %></td>
+      </tr>
+      </tbody>
+      <tfoot>
+      <tr>
+        <td></td>
+        <td><%= number_to_currency(@total_annual_expenses, unit: "$") %></td>
+      </tr>
+      </tfoot>
+    </table>
 
-<%= link_to 'New Expense', new_expense_path %>
+    <br>
+
+    <%= link_to 'New Expense', new_expense_path %>
+    <br>
+  </div>
+</div>
