--- a/app/views/incomes/index.html.erb
+++ b/app/views/incomes/index.html.erb
@@ -1,8 +1,7 @@
-<p id="notice"><%= notice %></p>
-
+<% if user_signed_in? %>
 <h1>Income</h1>
 <br>
-
+  <% if current_user.incomes.any? %>
 <div class="mdl-tabs mdl-js-tabs">
   <div class="mdl-tabs__tab-bar">
     <a href="#tab1-panel" class="mdl-tabs__tab is-active">Weekly</a>
@@ -100,3 +99,11 @@
     <br>
   </div>
 </div>
+  <% else %>
+    You have no Income, better
+    <%= link_to new_income_path, class: 'mdl-button mdl-js-button mdl-button--fab mdl-button--colored' do %>
+      <i class="material-icons">add</i>
+    <% end %>
+    some.
+<% end %>
+<% end %>
