--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,50 +1,63 @@
 <div class="flex-container">
   <h1>Dashboard</h1>
-  <div class="mdl-grid">
-    <div class="mdl-cell mdl-cell--4-col">
-      <div class="demo-card-square mdl-card mdl-shadow--2dp">
-        <div class="mdl-card__title mdl-card--expand">
-          <h2 class="mdl-card__title-text">Income</h2>
-        </div>
-        <div class="mdl-card__supporting-text">
-          <%= number_to_currency(@income, unit: "$") %>
-        </div>
-        <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-            View Income
-          </a>
+    <div class="mdl-tabs mdl-js-tabs">
+      <div class="mdl-tabs__tab-bar">
+        <a href="#tab1-panel" class="mdl-tabs__tab">Weekly</a>
+        <a href="#tab2-panel" class="mdl-tabs__tab is-active">Monthly</a>
+        <a href="#tab3-panel" class="mdl-tabs__tab">Annually</a>
+      </div>
+      <div class="mdl-tabs__panel" id="tab1-panel">
+      </div>
+      <div class="mdl-tabs__panel is-active" id="tab2-panel">
+        <div class="mdl-grid">
+          <div class="mdl-cell mdl-cell--4-col">
+            <div class="demo-card-square mdl-card mdl-shadow--2dp">
+              <div class="mdl-card__title mdl-card--expand">
+                <h2 class="mdl-card__title-text">Income</h2>
+              </div>
+              <div class="mdl-card__supporting-text">
+                <%= number_to_currency(@income, unit: "$") %>
+              </div>
+              <div class="mdl-card__actions mdl-card--border">
+                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                  View Income
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="mdl-cell mdl-cell--4-col">
+            <div class="demo-card-square mdl-card mdl-shadow--2dp">
+              <div class="mdl-card__title mdl-card--expand">
+                <h2 class="mdl-card__title-text">Expenses</h2>
+              </div>
+              <div class="mdl-card__supporting-text">
+                <%= number_to_currency(@total_monthly_expense, unit: "$") %>
+              </div>
+              <div class="mdl-card__actions mdl-card--border">
+                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                  View Expenses
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="mdl-cell mdl-cell--4-col">
+            <div class="demo-card-square mdl-card mdl-shadow--2dp">
+              <div class="mdl-card__title mdl-card--expand">
+                <h2 class="mdl-card__title-text">Total</h2>
+              </div>
+              <div class="mdl-card__supporting-text">
+                <%= number_to_currency(@monthly_leftovers, unit: "$") %>
+              </div>
+              <div class="mdl-card__actions mdl-card--border">
+                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
+                  View Updates
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="mdl-cell mdl-cell--4-col">
-      <div class="demo-card-square mdl-card mdl-shadow--2dp">
-        <div class="mdl-card__title mdl-card--expand">
-          <h2 class="mdl-card__title-text">Expenses</h2>
-        </div>
-        <div class="mdl-card__supporting-text">
-          <%= number_to_currency(@total_monthly_expense, unit: "$") %>
-        </div>
-        <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-            View Expenses
-          </a>
-        </div>
+      <div class="mdl-tabs__panel" id="tab3-panel">
       </div>
     </div>
-    <div class="mdl-cell mdl-cell--4-col">
-      <div class="demo-card-square mdl-card mdl-shadow--2dp">
-        <div class="mdl-card__title mdl-card--expand">
-          <h2 class="mdl-card__title-text">Total</h2>
-        </div>
-        <div class="mdl-card__supporting-text">
-          <%= number_to_currency(@monthly_leftovers, unit: "$") %>
-        </div>
-        <div class="mdl-card__actions mdl-card--border">
-          <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">
-            View Updates
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
