--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -1,31 +1,38 @@
-<p id="notice"><%= notice %></p>
+<% if user_signed_in? %>
+  <h1>Transactions</h1>
 
-<h1>Transactions</h1>
+  <% if current_user.transacions.any? %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Amount</th>
-      <th>Credit card</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @transactions.each do |transaction| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= transaction.Date %></td>
-        <td><%= transaction.amount %></td>
-        <td><%= transaction.credit_card %></td>
-        <td><%= link_to 'Show', transaction %></td>
-        <td><%= link_to 'Edit', edit_transaction_path(transaction) %></td>
-        <td><%= link_to 'Destroy', transaction, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Date</th>
+        <th>Amount</th>
+        <th>Credit card</th>
+        <th colspan="3"></th>
       </tr>
+    </thead>
+
+    <tbody>
+      <% @transactions.each do |transaction| %>
+        <tr>
+          <td><%= transaction.Date %></td>
+          <td><%= transaction.amount %></td>
+          <td><%= transaction.credit_card %></td>
+          <td><%= link_to 'Show', transaction %></td>
+          <td><%= link_to 'Edit', edit_transaction_path(transaction) %></td>
+          <td><%= link_to 'Destroy', transaction, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+    <br>
+    <%= link_to 'New Transaction', new_transaction_path %>
+  <% else %>
+    You have no Transactions, better
+    <%= link_to new_transaction_path, class: 'mdl-button mdl-js-button mdl-button--fab mdl-button--colored' do %>
+      <i class="material-icons">add</i>
     <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Transaction', new_transaction_path %>
+    one.
+  <% end %>
+<% end %>
